# nimbu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/nimbu-core/: Cargo.toml
crates/nimbu-core/src/: ids.rs  lib.rs  task.rs  task_queue.rs
crates/nimbu-core/src/task_queue/: backoff.rs  errors.rs  messages.rs  mod.rs  queue.rs  scheduler.rs
crates/nimbu-core/tests/: task_queue.rs  task_status.rs
crates/nimbu-network/: Cargo.toml
crates/nimbu-observability/: Cargo.toml
crates/nimbu-proto/: Cargo.toml
crates/nimbu-scheduler/: Cargo.toml
crates/nimbu-storage/: Cargo.toml
crates/nimbu-worker/: Cargo.toml
