[package]
name = "nimbu-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

uuid = { version = "1", features = ["v4"] }

